@@ -1,0 +1,7 @@
+ServerEvents.recipes(event => {
+    event.replaceInput(
+        { output: 'mysticalagriculture:fire_agglomeratio' },
+        'minecraft:lava_bucket',
+        'minecraft:flint'
+    )
+})
